test/expressions/hilde/assignopLHSargIsRef.good
assignopLHSargIsRef.chpl:12: warning: The left operand of '=' and '<op>=' should have 'ref' intent.
assignopLHSargIsRef.chpl:16: warning: The left operand of '=' and '<op>=' should have 'ref' intent.
assignopLHSargIsRef.chpl:12: In function '=':
assignopLHSargIsRef.chpl:13: error: illegal lvalue in assignment
